--- a/demo/option1/optionsdemo.ipynb
+++ b/demo/option1/optionsdemo.ipynb
@@ -238,9 +238,7 @@
    ],
    "source": [
     "unique_output = combine_injection_points(idf_outputs)\n",
-    "print(\n",
-    "    f\"{len(unique_output)} unique output variables will be added to file\"\n",
-    ")"
+    "print(f\"{len(unique_output)} unique output variables will be added to file\")"
    ]
   },
   {
@@ -717,7 +715,9 @@
     }
    ],
    "source": [
-    "testerdf[testerdf[\"$OA_timestep > $OA_min_sys and $Cool_sys_out > 0\"] == True][testerdf.columns[0:4]]"
+    "testerdf[testerdf[\"$OA_timestep > $OA_min_sys and $Cool_sys_out > 0\"] == True][\n",
+    "    testerdf.columns[0:4]\n",
+    "]"
    ]
   },
   {
@@ -870,7 +870,9 @@
     }
    ],
    "source": [
-    "testerdf[testerdf[\"$OA_timestep > $OA_min_sys and $Cool_sys_out > 0\"] == False][testerdf.columns[0:4]]"
+    "testerdf[testerdf[\"$OA_timestep > $OA_min_sys and $Cool_sys_out > 0\"] == False][\n",
+    "    testerdf.columns[0:4]\n",
+    "]"
    ]
   }
  ],
