--- a/demo/option3CNN/Lighting_CNN.ipynb
+++ b/demo/option3CNN/Lighting_CNN.ipynb
@@ -28,24 +28,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LightingControlType():\n",
+    "class LightingControlType:\n",
     "    IMG_SIZE = 50\n",
-    "    \n",
+    "\n",
     "    CONTINUOUS = \"profiles_jxl/CONTINUOUS_pic\"\n",
     "    CONTINUOUS_OFF = \"profiles_jxl/CONTINUOUS_OFF_pic\"\n",
     "    STEPPED = \"profiles_jxl/STEPPED_pic\"\n",
-    "    \n",
-    "    LABELS = {\n",
-    "        CONTINUOUS:0,\n",
-    "        CONTINUOUS_OFF:1,\n",
-    "        STEPPED:2\n",
-    "    }\n",
-    "    \n",
+    "\n",
+    "    LABELS = {CONTINUOUS: 0, CONTINUOUS_OFF: 1, STEPPED: 2}\n",
+    "\n",
     "    training_data = []\n",
     "    count_cont = 0\n",
     "    count_contoff = 0\n",
     "    count_step = 0\n",
-    "    \n",
+    "\n",
     "    def make_training_data(self):\n",
     "        for label in tqdm(self.LABELS):\n",
     "            for f in tqdm(os.listdir(label)):\n",
@@ -53,7 +49,9 @@
     "                    path = os.path.join(label, f)\n",
     "                    img = cv2.imread(path, cv2.IMREAD_GRAYSCALE)\n",
     "                    img = cv2.resize(img, (self.IMG_SIZE, self.IMG_SIZE))\n",
-    "                    onehot = np.eye(3)[self.LABELS[label]] # turn the scalor labels to one hot vector\n",
+    "                    onehot = np.eye(3)[\n",
+    "                        self.LABELS[label]\n",
+    "                    ]  # turn the scalor labels to one hot vector\n",
     "                    self.training_data.append([np.array(img), onehot])\n",
     "\n",
     "                    if label == self.CONTINUOUS:\n",
@@ -65,7 +63,7 @@
     "                except Exception as e:\n",
     "                    print(str(e))\n",
     "                    pass\n",
-    "        np.random.shuffle(self.training_data) # no need to reasign, this is in place\n",
+    "        np.random.shuffle(self.training_data)  # no need to reasign, this is in place\n",
     "        np.save(\"training_data.npy\", self.training_data)\n",
     "        print(f\"Continuous: {self.count_cont}\")\n",
     "        print(f\"Continuous_off: {self.count_contoff}\")\n",
@@ -306,6 +304,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "for i in range(5):\n",
     "    plt.imshow(training_data[i][0], cmap=\"gray\")\n",
     "    plt.show()\n",
@@ -322,38 +321,40 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
+    "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 32, 5)\n",
     "        self.conv2 = nn.Conv2d(32, 64, 5)\n",
     "        self.conv3 = nn.Conv2d(64, 128, 5)\n",
-    "        \n",
+    "\n",
     "        # use the following lines to check the number for input to fc layer\n",
-    "        x = torch.randn(50,50).view(-1, 1, 50, 50)\n",
+    "        x = torch.randn(50, 50).view(-1, 1, 50, 50)\n",
     "        self._to_linear = None\n",
     "        self.convs(x)\n",
-    "        \n",
+    "\n",
     "        self.fc1 = nn.Linear(self._to_linear, 512)\n",
     "        self.fc2 = nn.Linear(512, 3)\n",
     "\n",
     "    def convs(self, x):\n",
-    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2,2))\n",
-    "        x = F.max_pool2d(F.relu(self.conv2(x)), (2,2))\n",
-    "        x = F.max_pool2d(F.relu(self.conv3(x)), (2,2))\n",
-    "        \n",
+    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv2(x)), (2, 2))\n",
+    "        x = F.max_pool2d(F.relu(self.conv3(x)), (2, 2))\n",
+    "\n",
     "        if self._to_linear is None:\n",
-    "            self._to_linear = x[0].shape[0]*x[0].shape[1]*x[0].shape[2]\n",
+    "            self._to_linear = x[0].shape[0] * x[0].shape[1] * x[0].shape[2]\n",
     "        return x\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        x = self.convs(x)\n",
     "        x = x.view(-1, self._to_linear)\n",
-    "        \n",
+    "\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.fc2(x)\n",
-    "        \n",
+    "\n",
     "        return F.softmax(x, dim=1)\n",
+    "\n",
     "\n",
     "net = Net()"
    ]
@@ -366,8 +367,7 @@
    "source": [
     "import torch.optim as optim\n",
     "\n",
-    "optimizer = optim.Adam(net.parameters(),\n",
-    "                      lr=0.001)\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
     "loss_function = nn.MSELoss()"
    ]
   },
@@ -386,11 +386,11 @@
    ],
    "source": [
     "X = torch.Tensor([i[0] for i in training_data]).view(-1, 50, 50)\n",
-    "X = X / 255.0 # scale the image to 0-1\n",
+    "X = X / 255.0  # scale the image to 0-1\n",
     "y = torch.Tensor([i[1] for i in training_data])\n",
     "\n",
     "VAL_PCT = 0.1\n",
-    "val_size = int(len(X)*VAL_PCT)\n",
+    "val_size = int(len(X) * VAL_PCT)\n",
     "print(val_size)"
    ]
   },
@@ -440,8 +440,8 @@
     "    a += i[0]\n",
     "    b += i[1]\n",
     "    c += i[2]\n",
-    "    \n",
-    "print(a,b,c)"
+    "\n",
+    "print(a, b, c)"
    ]
   },
   {
@@ -576,22 +576,22 @@
     }
    ],
    "source": [
-    "BATCH_SIZE = 100 # change to smaller if got memory error\n",
+    "BATCH_SIZE = 100  # change to smaller if got memory error\n",
     "\n",
     "EPOCHS = 5\n",
     "\n",
     "for epoch in tqdm(range(EPOCHS)):\n",
     "    for i in tqdm(range(0, len(train_X), BATCH_SIZE)):\n",
-    "        batch_X = train_X[i:i + BATCH_SIZE].view(-1, 1, 50, 50)\n",
-    "        batch_y = train_y[i:i + BATCH_SIZE]\n",
-    "        \n",
+    "        batch_X = train_X[i : i + BATCH_SIZE].view(-1, 1, 50, 50)\n",
+    "        batch_y = train_y[i : i + BATCH_SIZE]\n",
+    "\n",
     "        net.zero_grad()\n",
-    "        \n",
+    "\n",
     "        outputs = net(batch_X)\n",
     "        loss = loss_function(outputs, batch_y)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    \n",
+    "\n",
     "    print(loss)"
    ]
   },
