--- a/src/LibraryShowCases.ipynb
+++ b/src/LibraryShowCases.ipynb
@@ -29,6 +29,7 @@
     "from datetimeep import DateTimeEP\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "# plt.rcParams['figure.figsize'] = [16, 12]"
    ]
   },
@@ -155,7 +156,7 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 2]\n",
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 2]\n",
     "run_libcase(items[0])"
    ]
   },
@@ -261,8 +262,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 2]\n",
-    "run_libcase(items[4], plot_option='day-compact')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 2]\n",
+    "run_libcase(items[4], plot_option=\"day-compact\")"
    ]
   },
   {
@@ -365,8 +366,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 2]\n",
-    "run_libcase(items[13], plot_option='day-compact')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 2]\n",
+    "run_libcase(items[13], plot_option=\"day-compact\")"
    ]
   },
   {
@@ -459,8 +460,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 5]\n",
-    "run_libcase(items[5], plot_option='all-expand')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 5]\n",
+    "run_libcase(items[5], plot_option=\"all-expand\")"
    ]
   },
   {
@@ -554,7 +555,7 @@
     }
    ],
    "source": [
-    "run_libcase(items[6], plot_option='all-expand')"
+    "run_libcase(items[6], plot_option=\"all-expand\")"
    ]
   },
   {
@@ -654,8 +655,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 7]\n",
-    "run_libcase(items[7], plot_option='all-expand')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 7]\n",
+    "run_libcase(items[7], plot_option=\"all-expand\")"
    ]
   },
   {
@@ -754,8 +755,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 7]\n",
-    "run_libcase(items[8], plot_option='day-expand')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 7]\n",
+    "run_libcase(items[8], plot_option=\"day-expand\")"
    ]
   },
   {
@@ -844,7 +845,7 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 2]\n",
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 2]\n",
     "run_libcase(items[9])"
    ]
   },
@@ -947,8 +948,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 8]\n",
-    "run_libcase(items[10], plot_option='all-expand')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 8]\n",
+    "run_libcase(items[10], plot_option=\"all-expand\")"
    ]
   },
   {
@@ -1050,8 +1051,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 8]\n",
-    "run_libcase(items[11], plot_option='day-expand')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 8]\n",
+    "run_libcase(items[11], plot_option=\"day-expand\")"
    ]
   },
   {
@@ -1158,8 +1159,8 @@
     }
    ],
    "source": [
-    "plt.rcParams['figure.figsize'] = [16, 4 * 3]\n",
-    "run_libcase(items[12], plot_option='day-compact')"
+    "plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "run_libcase(items[12], plot_option=\"day-compact\")"
    ]
   },
   {
