--- a/test_cases/doe_prototype_cases/DOEPrototypeCases.ipynb
+++ b/test_cases/doe_prototype_cases/DOEPrototypeCases.ipynb
@@ -18,12 +18,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "from workflowsteps import *\r\n",
-    "from library import *\r\n",
-    "from libcases import *\r\n",
-    "from datetimeep import DateTimeEP\r\n",
-    "\r\n",
-    "import matplotlib.pyplot as plt\r\n",
+    "from workflowsteps import *\n",
+    "from library import *\n",
+    "from libcases import *\n",
+    "from datetimeep import DateTimeEP\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# plt.rcParams['figure.figsize'] = [16, 12]"
    ],
    "outputs": [],
@@ -40,10 +41,10 @@
    "cell_type": "code",
    "execution_count": 39,
    "source": [
-    "cases_path = \"../../schema/new_library_verification_cases.json\"\r\n",
-    "lib_items_path = \"../../schema/library.json\"\r\n",
-    "items = assemble_verification_items(\r\n",
-    "    cases_path=cases_path, lib_items_path=lib_items_path\r\n",
+    "cases_path = \"../../schema/new_library_verification_cases.json\"\n",
+    "lib_items_path = \"../../schema/library.json\"\n",
+    "items = assemble_verification_items(\n",
+    "    cases_path=cases_path, lib_items_path=lib_items_path\n",
     ")"
    ],
    "outputs": [],
@@ -76,8 +77,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "item = items[caseid - 1]\r\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\r\n",
+    "item = items[caseid - 1]\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -97,10 +100,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "try:    \r\n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 3]\r\n",
-    "    run_libcase(item, plot_option='day-expand')\r\n",
-    "except Exception as e:\r\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
+    "except Exception as e:\n",
     "    print(e)"
    ],
    "outputs": [
@@ -182,8 +185,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "item = items[caseid - 1]\r\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\r\n",
+    "item = items[caseid - 1]\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -203,10 +208,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "source": [
-    "try:    \r\n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 3]\r\n",
-    "    run_libcase(item, plot_option='day-expand')\r\n",
-    "except Exception as e:\r\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
+    "except Exception as e:\n",
     "    print(e)"
    ],
    "outputs": [
@@ -301,7 +306,9 @@
    "execution_count": 10,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -321,9 +328,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 3]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -405,7 +412,9 @@
    "execution_count": 13,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -425,9 +434,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 3]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -523,7 +532,9 @@
    "execution_count": 16,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -543,9 +554,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 7]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 7]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -616,7 +627,9 @@
    "execution_count": 19,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -636,9 +649,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 7]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 7]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -709,7 +722,9 @@
    "execution_count": 41,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -729,9 +744,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 3]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -800,7 +815,9 @@
    "execution_count": 25,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -820,9 +837,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 3]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -891,7 +908,9 @@
    "execution_count": 28,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -911,9 +930,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 6]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 6]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -997,7 +1016,9 @@
    "execution_count": 31,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -1017,9 +1038,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 6]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 6]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -1103,7 +1124,9 @@
    "execution_count": 34,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -1123,9 +1146,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 6]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 6]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
@@ -1209,7 +1232,9 @@
    "execution_count": 37,
    "source": [
     "item = items[caseid - 1]\n",
-    "print(f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\")\n",
+    "print(\n",
+    "    f\"This is a {item['verification_class']} verification, and should {item['expected_result'].upper()}\\n\"\n",
+    ")\n",
     "print(item)"
    ],
    "outputs": [
@@ -1229,9 +1254,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "source": [
-    "try:    \n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 6]\n",
-    "    run_libcase(item, plot_option='day-expand')\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 6]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ],
