--- a/test_cases/tspr_cases/tspr_cases.ipynb
+++ b/test_cases/tspr_cases/tspr_cases.ipynb
@@ -18,16 +18,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# Import auxiliary packages\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "import json, six, glob, os\r\n",
-    "\r\n",
-    "os.chdir('../../src')\r\n",
-    "\r\n",
-    "# Import ANIMATE\r\n",
-    "from workflowsteps import *\r\n",
-    "from library import *\r\n",
-    "from libcases import *\r\n",
+    "# Import auxiliary packages\n",
+    "import matplotlib.pyplot as plt\n",
+    "import json, six, glob, os\n",
+    "\n",
+    "os.chdir(\"../../src\")\n",
+    "\n",
+    "# Import ANIMATE\n",
+    "from workflowsteps import *\n",
+    "from library import *\n",
+    "from libcases import *\n",
     "from datetimeep import DateTimeEP"
    ],
    "outputs": [],
@@ -37,13 +37,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "# Create test cases\r\n",
-    "test_case_list = {\r\n",
-    "    'sat_reset': 'SupplyAirTempReset',\r\n",
-    "    'chw_reset': 'CHWReset'\r\n",
-    "}\r\n",
-    "cases = {}\r\n",
-    "cases['cases'] = []\r\n",
+    "# Create test cases\n",
+    "test_case_list = {\"sat_reset\": \"SupplyAirTempReset\", \"chw_reset\": \"CHWReset\"}\n",
+    "cases = {}\n",
+    "cases[\"cases\"] = []\n",
     "case_counter = 0"
    ],
    "outputs": [],
@@ -60,55 +57,55 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# Create cases \"on-the-fly\"\r\n",
-    "for idf in glob.glob('../test_cases/tspr_cases/sat_reset/*.idf'):\r\n",
-    "    if not \"injected\" in idf:\r\n",
-    "        sat_case = {}\r\n",
-    "        sat_case[\"no\"] = str(case_counter)\r\n",
-    "\r\n",
-    "        idf_json = json.load(open(idf.replace(\".idf\", \".epJSON\")))\r\n",
-    "\r\n",
-    "        # Retrieve supply inlet node name of first airloop\r\n",
-    "        airloops = idf_json[\"AirLoopHVAC\"]\r\n",
-    "        airloop = list(airloops.keys())[0]\r\n",
-    "        sat_node = airloops[airloop][\"supply_side_outlet_node_names\"]\r\n",
-    "        if sat_node in idf_json[\"NodeList\"]:\r\n",
-    "            sat_node = idf_json[\"NodeList\"][sat_node][\"nodes\"][0][\"node_name\"]\r\n",
-    "\r\n",
-    "        # Retrieve zone design cooling temperature\r\n",
-    "        schs = idf_json[\"Schedule:Day:Interval\"]\r\n",
-    "        sch = [s for s in list(schs.keys()) if \"_Cooling_Schedule_Summer_Design_Day\" in s][0]\r\n",
-    "        tz_coo = 99\r\n",
-    "        for d in schs[sch][\"data\"]:\r\n",
-    "            if d[\"value_until_time\"] < tz_coo:\r\n",
-    "                tz_coo = d[\"value_until_time\"]\r\n",
-    "\r\n",
-    "        # Define simulation IO\r\n",
-    "        sat_case[\"run_simulation\"] = True\r\n",
-    "        sat_case[\"simulation_IO\"] = {\r\n",
-    "            \"idf\": \"../test_cases/tspr_cases/sat_reset/{}\".format(idf.split('\\\\')[-1]),\r\n",
-    "            \"idd\": \"../resources/Energy+V9_2_0.idd\",\r\n",
-    "            \"weather\": \"../weather/USA_WA_Seattle-Tacoma.Intl.AP.727930_TMY3.epw\",\r\n",
-    "            \"output\": \"eplusout.csv\",\r\n",
-    "            \"ep_path\": \"C:\\EnergyPlusV9-2-0\\energyplus.exe\"\r\n",
-    "        }\r\n",
-    "        sat_case[\"expected_result\"] = \"pass\"\r\n",
-    "        sat_case[\"verification_class\"] = test_case_list[\"sat_reset\"]\r\n",
-    "        sat_case[\"datapoints_source\"] = {\r\n",
-    "            \"idf_output_variables\": {\r\n",
-    "                \"T_sa_set\": {\r\n",
-    "                    \"subject\": f\"{sat_node}\",\r\n",
-    "                    \"variable\": \"System Node Setpoint Temperature\",\r\n",
-    "                    \"frequency\": \"detailed\"\r\n",
-    "                }\r\n",
-    "            },\r\n",
-    "            \"parameters\": {\r\n",
-    "                \"T_z_coo\": tz_coo\r\n",
-    "            }\r\n",
-    "        }\r\n",
-    "        cases['cases'].append(sat_case)\r\n",
-    "        case_counter += 1\r\n",
-    "json.dump(cases, open('../test_cases/tspr_cases/tspr_verification_cases.json', 'w'), indent=4)"
+    "# Create cases \"on-the-fly\"\n",
+    "for idf in glob.glob(\"../test_cases/tspr_cases/sat_reset/*.idf\"):\n",
+    "    if not \"injected\" in idf:\n",
+    "        sat_case = {}\n",
+    "        sat_case[\"no\"] = str(case_counter)\n",
+    "\n",
+    "        idf_json = json.load(open(idf.replace(\".idf\", \".epJSON\")))\n",
+    "\n",
+    "        # Retrieve supply inlet node name of first airloop\n",
+    "        airloops = idf_json[\"AirLoopHVAC\"]\n",
+    "        airloop = list(airloops.keys())[0]\n",
+    "        sat_node = airloops[airloop][\"supply_side_outlet_node_names\"]\n",
+    "        if sat_node in idf_json[\"NodeList\"]:\n",
+    "            sat_node = idf_json[\"NodeList\"][sat_node][\"nodes\"][0][\"node_name\"]\n",
+    "        # Retrieve zone design cooling temperature\n",
+    "        schs = idf_json[\"Schedule:Day:Interval\"]\n",
+    "        sch = [\n",
+    "            s for s in list(schs.keys()) if \"_Cooling_Schedule_Summer_Design_Day\" in s\n",
+    "        ][0]\n",
+    "        tz_coo = 99\n",
+    "        for d in schs[sch][\"data\"]:\n",
+    "            if d[\"value_until_time\"] < tz_coo:\n",
+    "                tz_coo = d[\"value_until_time\"]\n",
+    "        # Define simulation IO\n",
+    "        sat_case[\"run_simulation\"] = True\n",
+    "        sat_case[\"simulation_IO\"] = {\n",
+    "            \"idf\": \"../test_cases/tspr_cases/sat_reset/{}\".format(idf.split(\"\\\\\")[-1]),\n",
+    "            \"idd\": \"../resources/Energy+V9_2_0.idd\",\n",
+    "            \"weather\": \"../weather/USA_WA_Seattle-Tacoma.Intl.AP.727930_TMY3.epw\",\n",
+    "            \"output\": \"eplusout.csv\",\n",
+    "            \"ep_path\": \"C:\\EnergyPlusV9-2-0\\energyplus.exe\",\n",
+    "        }\n",
+    "        sat_case[\"expected_result\"] = \"pass\"\n",
+    "        sat_case[\"verification_class\"] = test_case_list[\"sat_reset\"]\n",
+    "        sat_case[\"datapoints_source\"] = {\n",
+    "            \"idf_output_variables\": {\n",
+    "                \"T_sa_set\": {\n",
+    "                    \"subject\": f\"{sat_node}\",\n",
+    "                    \"variable\": \"System Node Setpoint Temperature\",\n",
+    "                    \"frequency\": \"detailed\",\n",
+    "                }\n",
+    "            },\n",
+    "            \"parameters\": {\"T_z_coo\": tz_coo},\n",
+    "        }\n",
+    "        cases[\"cases\"].append(sat_case)\n",
+    "        case_counter += 1\n",
+    "json.dump(\n",
+    "    cases, open(\"../test_cases/tspr_cases/tspr_verification_cases.json\", \"w\"), indent=4\n",
+    ")"
    ],
    "outputs": [],
    "metadata": {}
@@ -124,71 +121,72 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "# Create cases \"on-the-fly\"\r\n",
-    "for idf in glob.glob('../test_cases/tspr_cases/chw_reset/*.idf'):\r\n",
-    "    if not \"injected\" in idf:\r\n",
-    "        chw_case = {}\r\n",
-    "        chw_case[\"no\"] = str(case_counter)\r\n",
-    "\r\n",
-    "        idf_json = json.load(open(idf.replace(\".idf\", \".epJSON\")))\r\n",
-    "\r\n",
-    "        # Retrieve supply inlet node name of first airloop\r\n",
-    "        plantloops = idf_json[\"PlantLoop\"]\r\n",
-    "        chloop = [p for p in plantloops if \"chiller\" in p.lower()][0]\r\n",
-    "        chw_node = plantloops[chloop][\"loop_temperature_setpoint_node_name\"]\r\n",
-    "\r\n",
-    "        # Get chiller name\r\n",
-    "        chillers = idf_json[\"Chiller:Electric:EIR\"]\r\n",
-    "        chiller = list(chillers.keys())[0]\r\n",
-    "\r\n",
-    "        # Retrieve zone design cooling temperature\r\n",
-    "        spm_rt_oa = idf_json[\"SetpointManager:OutdoorAirReset\"]\r\n",
-    "        for s, v in spm_rt_oa.items():\r\n",
-    "            if chw_node in v['setpoint_node_or_nodelist_name']:\r\n",
-    "                t_oa_max = v['outdoor_high_temperature']\r\n",
-    "                t_oa_min = v['outdoor_low_temperature']\r\n",
-    "                t_chw_max_st = v['setpoint_at_outdoor_low_temperature']\r\n",
-    "                t_chw_min_st = v['setpoint_at_outdoor_high_temperature']\r\n",
-    "\r\n",
-    "        # Define simulation IO\r\n",
-    "        chw_case[\"run_simulation\"] = True\r\n",
-    "        chw_case[\"simulation_IO\"] = {\r\n",
-    "            \"idf\": \"../test_cases/tspr_cases/chw_reset/{}\".format(idf.split('\\\\')[-1]),\r\n",
-    "            \"idd\": \"../resources/Energy+V9_2_0.idd\",\r\n",
-    "            \"weather\": \"../weather/USA_WA_Seattle-Tacoma.Intl.AP.727930_TMY3.epw\",\r\n",
-    "            \"output\": \"eplusout.csv\",\r\n",
-    "            \"ep_path\": \"C:\\EnergyPlusV9-2-0\\energyplus.exe\"\r\n",
-    "        }\r\n",
-    "        chw_case[\"expected_result\"] = \"pass\"\r\n",
-    "        chw_case[\"verification_class\"] = test_case_list[\"chw_reset\"]\r\n",
-    "        chw_case[\"datapoints_source\"] = {\r\n",
-    "            \"idf_output_variables\": {\r\n",
-    "                \"T_oa_db\": {\r\n",
-    "                    \"subject\": \"Environment\",\r\n",
-    "                    \"variable\": \"Site Outdoor Air Drybulb Temperature\",\r\n",
-    "                    \"frequency\": \"TimeStep\"\r\n",
-    "                },\r\n",
-    "                \"T_chw\": {\r\n",
-    "                    \"subject\": f\"{chw_node}\",\r\n",
-    "                    \"variable\": \"System Node Setpoint Temperature\",\r\n",
-    "                    \"frequency\": \"TimeStep\"\r\n",
-    "                },\r\n",
-    "                \"m_chw\": {\r\n",
-    "                    \"subject\": f\"{chiller}\",\r\n",
-    "                    \"variable\": \"Chiller Evaporator Mass Flow Rate\",\r\n",
-    "                    \"frequency\": \"TimeStep\"\r\n",
-    "                }\r\n",
-    "            },\r\n",
-    "            \"parameters\": {\r\n",
-    "                \"T_oa_max\": t_oa_max,\r\n",
-    "                \"T_oa_min\": t_oa_min,\r\n",
-    "                \"T_chw_max_st\": t_chw_max_st,\r\n",
-    "                \"T_chw_min_st\": t_chw_min_st\r\n",
-    "            }\r\n",
-    "        }\r\n",
-    "        cases['cases'].append(chw_case)\r\n",
-    "        case_counter += 1\r\n",
-    "json.dump(cases, open('../test_cases/tspr_cases/tspr_verification_cases.json', 'w'), indent=4)"
+    "# Create cases \"on-the-fly\"\n",
+    "for idf in glob.glob(\"../test_cases/tspr_cases/chw_reset/*.idf\"):\n",
+    "    if not \"injected\" in idf:\n",
+    "        chw_case = {}\n",
+    "        chw_case[\"no\"] = str(case_counter)\n",
+    "\n",
+    "        idf_json = json.load(open(idf.replace(\".idf\", \".epJSON\")))\n",
+    "\n",
+    "        # Retrieve supply inlet node name of first airloop\n",
+    "        plantloops = idf_json[\"PlantLoop\"]\n",
+    "        chloop = [p for p in plantloops if \"chiller\" in p.lower()][0]\n",
+    "        chw_node = plantloops[chloop][\"loop_temperature_setpoint_node_name\"]\n",
+    "\n",
+    "        # Get chiller name\n",
+    "        chillers = idf_json[\"Chiller:Electric:EIR\"]\n",
+    "        chiller = list(chillers.keys())[0]\n",
+    "\n",
+    "        # Retrieve zone design cooling temperature\n",
+    "        spm_rt_oa = idf_json[\"SetpointManager:OutdoorAirReset\"]\n",
+    "        for s, v in spm_rt_oa.items():\n",
+    "            if chw_node in v[\"setpoint_node_or_nodelist_name\"]:\n",
+    "                t_oa_max = v[\"outdoor_high_temperature\"]\n",
+    "                t_oa_min = v[\"outdoor_low_temperature\"]\n",
+    "                t_chw_max_st = v[\"setpoint_at_outdoor_low_temperature\"]\n",
+    "                t_chw_min_st = v[\"setpoint_at_outdoor_high_temperature\"]\n",
+    "        # Define simulation IO\n",
+    "        chw_case[\"run_simulation\"] = True\n",
+    "        chw_case[\"simulation_IO\"] = {\n",
+    "            \"idf\": \"../test_cases/tspr_cases/chw_reset/{}\".format(idf.split(\"\\\\\")[-1]),\n",
+    "            \"idd\": \"../resources/Energy+V9_2_0.idd\",\n",
+    "            \"weather\": \"../weather/USA_WA_Seattle-Tacoma.Intl.AP.727930_TMY3.epw\",\n",
+    "            \"output\": \"eplusout.csv\",\n",
+    "            \"ep_path\": \"C:\\EnergyPlusV9-2-0\\energyplus.exe\",\n",
+    "        }\n",
+    "        chw_case[\"expected_result\"] = \"pass\"\n",
+    "        chw_case[\"verification_class\"] = test_case_list[\"chw_reset\"]\n",
+    "        chw_case[\"datapoints_source\"] = {\n",
+    "            \"idf_output_variables\": {\n",
+    "                \"T_oa_db\": {\n",
+    "                    \"subject\": \"Environment\",\n",
+    "                    \"variable\": \"Site Outdoor Air Drybulb Temperature\",\n",
+    "                    \"frequency\": \"TimeStep\",\n",
+    "                },\n",
+    "                \"T_chw\": {\n",
+    "                    \"subject\": f\"{chw_node}\",\n",
+    "                    \"variable\": \"System Node Setpoint Temperature\",\n",
+    "                    \"frequency\": \"TimeStep\",\n",
+    "                },\n",
+    "                \"m_chw\": {\n",
+    "                    \"subject\": f\"{chiller}\",\n",
+    "                    \"variable\": \"Chiller Evaporator Mass Flow Rate\",\n",
+    "                    \"frequency\": \"TimeStep\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"parameters\": {\n",
+    "                \"T_oa_max\": t_oa_max,\n",
+    "                \"T_oa_min\": t_oa_min,\n",
+    "                \"T_chw_max_st\": t_chw_max_st,\n",
+    "                \"T_chw_min_st\": t_chw_min_st,\n",
+    "            },\n",
+    "        }\n",
+    "        cases[\"cases\"].append(chw_case)\n",
+    "        case_counter += 1\n",
+    "json.dump(\n",
+    "    cases, open(\"../test_cases/tspr_cases/tspr_verification_cases.json\", \"w\"), indent=4\n",
+    ")"
    ],
    "outputs": [],
    "metadata": {}
@@ -197,7 +195,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "len(cases['cases'])"
+    "len(cases[\"cases\"])"
    ],
    "outputs": [
     {
@@ -217,18 +215,18 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "# Build verification items\r\n",
-    "items = assemble_verification_items(\r\n",
-    "    cases_path=\"../test_cases/tspr_cases/tspr_verification_cases.json\", \r\n",
-    "    lib_items_path=\"../schema/library.json\"\r\n",
-    ")\r\n",
-    "item = items[0]\r\n",
-    "\r\n",
-    "# Run verification\r\n",
-    "try:\r\n",
-    "    plt.rcParams['figure.figsize'] = [16, 4 * 3]\r\n",
-    "    run_libcase(item, plot_option='day-expand')\r\n",
-    "except Exception as e:\r\n",
+    "# Build verification items\n",
+    "items = assemble_verification_items(\n",
+    "    cases_path=\"../test_cases/tspr_cases/tspr_verification_cases.json\",\n",
+    "    lib_items_path=\"../schema/library.json\",\n",
+    ")\n",
+    "item = items[0]\n",
+    "\n",
+    "# Run verification\n",
+    "try:\n",
+    "    plt.rcParams[\"figure.figsize\"] = [16, 4 * 3]\n",
+    "    run_libcase(item, plot_option=\"day-expand\")\n",
+    "except Exception as e:\n",
     "    print(e)"
    ],
    "outputs": [
